# travel-planner-ai

./: pyproject.toml
app/: main.py
app/api/: chat.py
app/core/: config.py
app/models/: chat.py
app/services/: chat_service.py
app/storage/: memory.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py
backend/app/core/: config.py
backend/app/extractors/: parameter_extractor.py
backend/app/models/: chat.py
backend/app/providers/: gemini_provider.py  langchain_provider.py
backend/app/services/: chat_service.py  memory_service.py  prompt_service.py  tool_service.py
backend/app/storage/: memory.py
backend/app/tools/: __init__.py  base_tool.py  currency_tool.py  hotel_tool.py  registry.py  router.py  weather_tool.py
backend/app/vectorstore/: db.py  ingest.py
backend/chroma_db/: chroma.sqlite3
backend/tests/: test_parameter_extractor.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
frontend/lib/: gemini.ts
