[project]
name = "travel-planner-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.10.0",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
